VIC fixes and csvs for unmatched records

--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -42,21 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
+    "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "#projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "\n",
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
     "import list_functions as lf\n",
     "\n",
-    "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
-    "#projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
-    "conservationlisturl = \"https://vba.dse.vic.gov.au/vba/downloadVSC.do\" # gets a csv\n",
-    "conservationList = pd.read_csv(projectDir + \"source-data/VIC/Species-Checklist.csv\",encoding='cp1252')\n"
+    "vicchecklisturl = \"https://vba.dse.vic.gov.au/vba/downloadVSC.do\" # gets a csv\n",
+    "vicchecklist = pd.read_csv(projectDir + \"source-data/VIC/Species-Checklist.csv\",encoding='cp1252')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -68,7 +69,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Extract conservation list\n",
+    "# Extract and format initial list\n",
     "1. Drop non-required columns\n",
     "2. Rename columns for Darwin Core list terms\n",
     "3. Assign additional required list fields"
@@ -82,15 +83,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "source": [
+    "vicchecklist['LAST_MOD'].drop_duplicates().sort_values()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "22182    01/01/2010\n10432    01/02/2012\n11265    01/02/2018\n12493    01/02/2021\n18298    01/03/2017\n            ...    \n13112    31/10/2016\n159      31/10/2017\n10501    31/10/2018\n11206    31/10/2020\n15567    31/10/2022\nName: LAST_MOD, Length: 899, dtype: object"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Drop columns\n",
-    "conservationList = conservationList.drop(['PARENT_TAXON_LEVEL_CDE','PARENT_TAXON_ID','ALL_DISCIPLINE_CODES',\n",
+    "vicchecklist = vicchecklist.drop(['PARENT_TAXON_LEVEL_CDE','PARENT_TAXON_ID','ALL_DISCIPLINE_CODES',\n",
     "                                          'TREATIES','SHORT_NAME','NVIS_GROWTHFORM','SCIENTIFIC_NME_SYNONYM',\n",
     "                                          'COMMON_NME_SYNONYM','PRINT_ORDER_NUM'],axis=1)\n",
     "# Rename columns\n",
-    "conservationList = conservationList.rename(columns=\n",
+    "vicchecklist = vicchecklist.rename(columns=\n",
     "{\n",
     "    'TAXON_ID':'taxonID',\n",
     "    'SCIENTIFIC_NAME':'scientificName',\n",
@@ -108,41 +132,15 @@
     "    'EXTRACT_DATE': 'extractDate',\n",
     "    'LAST_MOD':'modified'\n",
     "})\n",
-    "conservationList['taxonRank'] = 'species'\n",
-    "conservationList['status'] = conservationList['ffgactstatus']\n",
-    "conservationList['sourceStatus'] = conservationList['ffgactstatus']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "    taxonID               scientificName        vernacularName  \\\n9      4864           Ambassis agassizii   Agassiz's Glassfish   \n28   528544            Bidyanus bidyanus          Silver Perch   \n37     5133            Chelodina expansa  Broad-shelled Turtle   \n48     4784  Craterocephalus fluviatilis      Murray Hardyhead   \n\n   scientificNameAuthority primaryDiscipline establishmentMeans taxonRank  \\\n9       Steindachner, 1867     Aquatic fauna                NaN   species   \n28        (Mitchell, 1838)     Aquatic fauna                NaN   species   \n37              Gray, 1857     Aquatic fauna                NaN   species   \n48         McCulloch, 1912     Aquatic fauna                NaN   species   \n\n   speciesGroup           ffgactstatus          epbcactStatus  \\\n9          Fish                Extinct                    NaN   \n28         Fish             Endangered  Critically Endangered   \n37     Reptiles             Endangered                    NaN   \n48         Fish  Critically Endangered             Endangered   \n\n        vicadvisorystatus restrictedFlag    modified extractDate  \\\n9      Regionally extinct            NaN  2013-04-04  2023-01-16   \n28             Vulnerable            NaN  2016-05-24  2023-01-16   \n37             Endangered            NaN  2014-11-20  2023-01-16   \n48  Critically endangered            NaN  2013-04-04  2023-01-16   \n\n                   status           sourceStatus  \n9                 Extinct                Extinct  \n28             Endangered             Endangered  \n37             Endangered             Endangered  \n48  Critically Endangered  Critically Endangered  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxonID</th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>scientificNameAuthority</th>\n      <th>primaryDiscipline</th>\n      <th>establishmentMeans</th>\n      <th>taxonRank</th>\n      <th>speciesGroup</th>\n      <th>ffgactstatus</th>\n      <th>epbcactStatus</th>\n      <th>vicadvisorystatus</th>\n      <th>restrictedFlag</th>\n      <th>modified</th>\n      <th>extractDate</th>\n      <th>status</th>\n      <th>sourceStatus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>4864</td>\n      <td>Ambassis agassizii</td>\n      <td>Agassiz's Glassfish</td>\n      <td>Steindachner, 1867</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Fish</td>\n      <td>Extinct</td>\n      <td>NaN</td>\n      <td>Regionally extinct</td>\n      <td>NaN</td>\n      <td>2013-04-04</td>\n      <td>2023-01-16</td>\n      <td>Extinct</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>528544</td>\n      <td>Bidyanus bidyanus</td>\n      <td>Silver Perch</td>\n      <td>(Mitchell, 1838)</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Fish</td>\n      <td>Endangered</td>\n      <td>Critically Endangered</td>\n      <td>Vulnerable</td>\n      <td>NaN</td>\n      <td>2016-05-24</td>\n      <td>2023-01-16</td>\n      <td>Endangered</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>5133</td>\n      <td>Chelodina expansa</td>\n      <td>Broad-shelled Turtle</td>\n      <td>Gray, 1857</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Reptiles</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>2014-11-20</td>\n      <td>2023-01-16</td>\n      <td>Endangered</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>4784</td>\n      <td>Craterocephalus fluviatilis</td>\n      <td>Murray Hardyhead</td>\n      <td>McCulloch, 1912</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Fish</td>\n      <td>Critically Endangered</td>\n      <td>Endangered</td>\n      <td>Critically endangered</td>\n      <td>NaN</td>\n      <td>2013-04-04</td>\n      <td>2023-01-16</td>\n      <td>Critically Endangered</td>\n      <td>Critically Endangered</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# reformat date\n",
-    "conservationList['extractDate'] = pd.to_datetime(conservationList['extractDate'], format='%d/%m/%Y')\n",
-    "conservationList['extractDate'] = conservationList['extractDate'].dt.strftime('%Y-%m-%d')\n",
-    "conservationList['modified'] = pd.to_datetime(conservationList['modified'], format='%d/%m/%Y')\n",
-    "conservationList['modified'] = conservationList['modified'].dt.strftime('%Y-%m-%d')\n",
-    "sensitiveList = conservationList\n",
-    "conservationList = conservationList[conservationList[\"status\"].notna()]\n",
+    "vicchecklist['taxonRank'] = 'species'\n",
+    "vicchecklist['status'] = vicchecklist['ffgactstatus']\n",
+    "vicchecklist['sourceStatus'] = vicchecklist['ffgactstatus']\n",
     "\n",
-    "conservationList.head(4)"
+    "# reformat date\n",
+    "vicchecklist['extractDate'] = pd.to_datetime(vicchecklist['extractDate'], format='%d/%m/%Y')\n",
+    "vicchecklist['extractDate'] = vicchecklist['extractDate'].dt.strftime('%Y-%m-%d')\n",
+    "vicchecklist['modified'] = pd.to_datetime(vicchecklist['modified'], format='%d/%m/%Y')\n",
+    "vicchecklist['modified'] = vicchecklist['modified'].dt.strftime('%Y-%m-%d')"
    ],
    "metadata": {
     "collapsed": false,
@@ -154,33 +152,33 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Extract Sensitive List\n",
-    "1. Using the conservationList extract Sensitive list records\n",
-    "2. Records where RESTRICTED_FLAG is not null"
+    "# Split out sensitive and conservation lists"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
-      "text/plain": "136"
+      "text/plain": "                            0\nsensitive list count      136\nconservation list count  1999",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>sensitive list count</th>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>conservation list count</th>\n      <td>1999</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitiveList = sensitiveList[sensitiveList[\"restrictedFlag\"].notna()]\n",
-    "len(sensitiveList.index)"
+    "sensitiveList = vicchecklist[vicchecklist[\"restrictedFlag\"].notna()]\n",
+    "conservationList = vicchecklist[vicchecklist[\"status\"].notna()]\n",
+    "c = [len(conservationList.index)]\n",
+    "d = {'sensitive list count': [len(sensitiveList.index)],\n",
+    "     'conservation list count':[len(conservationList.index)]}\n",
+    "pd.DataFrame(d).transpose()"
    ],
    "metadata": {
     "collapsed": false,
@@ -191,16 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished processing\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#Write to CSV\n",
     "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",index=False)\n",
