Fixes in response to inat update log

--- a/source-code/py-notebook/inaturalist-statuses/merge-all.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/merge-all.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -41,9 +41,9 @@
       "       'description'],\n",
       "      dtype='object')\n",
       "/Users/new330/IdeaProjects/authoritative-lists/source-data/inaturalist-statuses/sa.csv\n",
-      "Index(['Unnamed: 0.1', 'Unnamed: 0', 'action', 'taxon_name', 'id', 'taxon_id',\n",
-      "       'status', 'iucn_equivalent', 'authority', 'url', 'geoprivacy',\n",
-      "       'place_id', 'username', 'description'],\n",
+      "Index(['action', 'taxon_name', 'id', 'taxon_id', 'status', 'iucn_equivalent',\n",
+      "       'authority', 'url', 'geoprivacy', 'place_id', 'username',\n",
+      "       'description'],\n",
       "      dtype='object')\n",
       "/Users/new330/IdeaProjects/authoritative-lists/source-data/inaturalist-statuses/tas.csv\n",
       "Index(['action', 'taxon_name', 'id', 'taxon_id', 'status', 'iucn_equivalent',\n",
